# sentinellium

./: .gitignore  Makefile  README.md  pyproject.toml
agent/: package.json  tsconfig.json  vitest.config.ts
agent-tests/: README.md
agent-tests/scenarios/: 01-native-loader.md  02-frida-detect.md  03-full-audit.md  04-fingerprint.md  05-integrity-baseline.md  06-jni-tracer.md  07-network-probe.md  08-simulation-policies.md  09-multi-module-correlation.md  10-edge-cases.md
ci/: Dockerfile  __init__.py  entrypoint.sh  github_action.yaml  runner.py  thresholds.yaml
config/: default-audit.yaml  default.yaml  ios-default.yaml  rasp-signatures.yaml  strict.yaml
config/policies/: monitor.yaml  strict.yaml
demo/: README.md  expected-output.txt
ebpf/: __init__.py  correlator.py  loader.py  ring_buffer.py
ebpf/probes/: file_monitor.bpf.c  lib_load.bpf.c  process_monitor.bpf.c
gadget/: __init__.py  config_gen.py  patcher.py  signer.py
gadget/templates/: gadget-config.json
host/: __init__.py  cli.py  device.py  differential.py  models.py  renderer.py
intelligence/: aggregator.py  collector.py  config.yaml  requirements.txt  scanner.py
mcp-server/: package-lock.json  package.json  tsconfig.json
mcp-server/src/: index.ts  kahlo-client.ts
modules/: frida-detect.js  integrity.js  jni-tracer.js  native-loader.js  network-probe.js  rasp-fingerprint.js
tests/agent/: frida-detection.test.ts  integrity.test.ts  jni-tracer.test.ts  native-loader.test.ts  network-probe.test.ts  rasp-fingerprint.test.ts
tests/host/: test_ci_runner.py  test_differential.py  (+3 more)
(+21 files in other folders)
